@@ -1,3 +1,9 @@
+2002-03-20  Havoc Pennington  <hp@redhat.com>
+
+	* gconf/gconf-value.c: change all the "getters" to be functions
+	not macros, so we can add g_return_if_fail and be typesafe and
+	generally suck less. Suggested most recently by Jody.
+
 2002-03-19  Havoc Pennington  <hp@pobox.com>
 
 	* backends/xml-cache.c (dircmp): fix bad assertion reported
